fixed spacing

--- a/web.css
+++ b/web.css
@@ -139,7 +139,7 @@ span.dot{
 .credit-container{
 display: flex;
 flex-direction: row;
-justify-content: space-around;
+justify-content: space-between;
 
 }
 
